--- a/content/manual/problems/standard-model.mdx
+++ b/content/manual/problems/standard-model.mdx
@@ -65,14 +65,15 @@ The selection of $\mathrm{SO}(10)$ as the unification carrier is not an assumpti
 The question is: among all candidate completions, which one is *forced* by the admissibility recursion
 
 $$
-\mathcal{L} = \Omega \Delta \partial(\mathcal{L}) , ?
+\mathcal{L} = \Omega \Delta \partial(\mathcal{L})
 $$
 
 The unique minimizer is **$\mathrm{SO}(10)$** (equivalently $\mathrm{Spin}(10)$), with one generation hosted in the spinor representation
 
 $$
-16_F.
+16_F
 $$
+
 
 ---
 
@@ -232,3 +233,4 @@ $$
 **Supporting papers:** See the papers section below for full technical details, proofs, and formal statements.
 
 © 2026 Jeremy Rodgers. All rights reserved. Content released under CC BY-NC-ND 4.0 unless otherwise stated.
+
