--- a/content/manual/problems/standard-model.mdx
+++ b/content/manual/problems/standard-model.mdx
@@ -118,12 +118,12 @@ Because the infrared fermion spectrum is the *complete* restriction of a single 
 Representative cancellations include:
 
 $$
-\mathrm{SU}(3)^2!-!\mathrm{U}(1):\quad
+\mathrm{SU}(3)^2 - \mathrm{U}(1):\quad
 \frac{1}{6} - \frac{1}{3} + \frac{1}{6} = 0
 $$
 
 $$
-\mathrm{SU}(2)^2!-!\mathrm{U}(1):\quad
+\mathrm{SU}(2)^2 - \mathrm{U}(1):\quad
 \frac{1}{4} - \frac{1}{4} = 0
 $$
 
@@ -233,4 +233,5 @@ $$
 **Supporting papers:** See the papers section below for full technical details, proofs, and formal statements.
 
 © 2026 Jeremy Rodgers. All rights reserved. Content released under CC BY-NC-ND 4.0 unless otherwise stated.
+
 
