--- a/content/manual/problems/standard-model.mdx
+++ b/content/manual/problems/standard-model.mdx
@@ -47,14 +47,55 @@ $$
 
 **One-generation chiral fermion content** (in left-handed Weyl notation):
 
-| Multiplet      | $\mathrm{SU}(3)$ | $\mathrm{SU}(2)$ | Hypercharge $Y$ |
-|----------------|------------------|------------------|------------------|
-| $Q_L$          | $3$              | $2$              | $+\tfrac{1}{6}$  |
-| $u_R^{c}$      | $\bar{3}$        | $1$              | $-\tfrac{2}{3}$  |
-| $d_R^{c}$      | $\bar{3}$        | $1$              | $+\tfrac{1}{3}$  |
-| $L_L$          | $1$              | $2$              | $-\tfrac{1}{2}$  |
-| $e_R^{c}$      | $1$              | $1$              | $+1$             |
-| $\nu_R$        | $1$              | $1$              | $0$              |
+<table>
+  <thead>
+    <tr>
+      <th>Multiplet</th>
+      <th>$\mathrm{SU}(3)$</th>
+      <th>$\mathrm{SU}(2)$</th>
+      <th>Hypercharge $Y$</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>$Q_L$</td>
+      <td>$3$</td>
+      <td>$2$</td>
+      <td>$+\tfrac{1}{6}$</td>
+    </tr>
+    <tr>
+      <td>$u_R^{c}$</td>
+      <td>$\bar{3}$</td>
+      <td>$1$</td>
+      <td>$-\tfrac{2}{3}$</td>
+    </tr>
+    <tr>
+      <td>$d_R^{c}$</td>
+      <td>$\bar{3}$</td>
+      <td>$1$</td>
+      <td>$+\tfrac{1}{3}$</td>
+    </tr>
+    <tr>
+      <td>$L_L$</td>
+      <td>$1$</td>
+      <td>$2$</td>
+      <td>$-\tfrac{1}{2}$</td>
+    </tr>
+    <tr>
+      <td>$e_R^{c}$</td>
+      <td>$1$</td>
+      <td>$1$</td>
+      <td>$+1$</td>
+    </tr>
+    <tr>
+      <td>$\nu_R$</td>
+      <td>$1$</td>
+      <td>$1$</td>
+      <td>$0$</td>
+    </tr>
+  </tbody>
+</table>
+
 
 
 ---
@@ -234,6 +275,7 @@ $$
 **Supporting papers:** See the papers section below for full technical details, proofs, and formal statements.
 
 © 2026 Jeremy Rodgers. All rights reserved. Content released under CC BY-NC-ND 4.0 unless otherwise stated.
+
 
 
 
