--- a/content/manual/problems/standard-model.mdx
+++ b/content/manual/problems/standard-model.mdx
@@ -219,12 +219,38 @@ Matter dominance is therefore a structural selection consequence.
 
 ## 12. Conventional vs Structural $\mathrm{SO}(10)$
 
-| Feature                   | Conventional SO(10) GUT | This reconstruction |
-| ------------------------- | ----------------------- | ------------------- |
-| Carrier selection         | Assumed                 | Derived             |
-| Generation count          | Accommodated            | Derived             |
-| Hypercharge normalization | Assumed                 | Derived             |
-| Exotics                   | Tolerated               | Forbidden           |
+<table>
+  <thead>
+    <tr>
+      <th>Feature</th>
+      <th>Conventional $\mathrm{SO}(10)$ GUT</th>
+      <th>This reconstruction</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>Carrier selection</td>
+      <td>Assumed</td>
+      <td>Derived</td>
+    </tr>
+    <tr>
+      <td>Generation count</td>
+      <td>Accommodated</td>
+      <td>Derived</td>
+    </tr>
+    <tr>
+      <td>Hypercharge normalization</td>
+      <td>Assumed</td>
+      <td>Derived</td>
+    </tr>
+    <tr>
+      <td>Exotics</td>
+      <td>Tolerated</td>
+      <td>Forbidden</td>
+    </tr>
+  </tbody>
+</table>
+
 
 The shift is from possibility to necessity.
 
@@ -275,6 +301,7 @@ $$
 **Supporting papers:** See the papers section below for full technical details, proofs, and formal statements.
 
 © 2026 Jeremy Rodgers. All rights reserved. Content released under CC BY-NC-ND 4.0 unless otherwise stated.
+
 
 
 
